--- a/app/src/main/res/layout/activity_controlasistencia_maestro.xml
+++ b/app/src/main/res/layout/activity_controlasistencia_maestro.xml
@@ -31,12 +31,12 @@
 
                 <TextView
                     android:id="@+id/tv_controlasitencia"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="CONTROL ASISTENCIA"
+                    android:text="@string/control_asistencia"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -44,7 +44,7 @@
 
             <View
                 android:id="@+id/divider2"
-                android:layout_width="2in"
+                android:layout_width="300dp"
                 android:layout_height="1dp"
                 android:background="@color/atarraya"
                 android:layout_gravity="center"/>
@@ -56,18 +56,18 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Grado :"
+                    android:layout_weight="1"
+                    android:text="@string/grado_assitencia"
                     android:textColor="@color/oscuro"
                     android:textSize="18sp" />
 
                 <Spinner
-                    android:id="@+id/sp_gradoconsulta"
-                    android:layout_width="225dp"
+                    android:id="@+id/sp_gradoconsultaasistencia"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/spinner_style"
-                    android:layout_margin="10dp" />
+                    android:background="@drawable/spinner_style"/>
 
             </LinearLayout>
 
@@ -85,7 +85,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Seleccione una fecha :"
+                        android:text="@string/seleccione_una_fecha"
                         android:textColor="@color/oscuro"
                         android:textSize="18sp" />
 
@@ -94,7 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:text="Fecha Seleccionada" />
+                        android:text="@string/fecha_seleccionada" />
                 </LinearLayout>
 
                 <View
@@ -108,7 +108,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Asistencia registrada :"
+                    android:text="@string/asistencia_registrada"
                     android:textColor="@color/oscuro"
                     android:textSize="18sp" />
 
