--- a/app/src/main/res/layout/activity_reserva_equipo.xml
+++ b/app/src/main/res/layout/activity_reserva_equipo.xml
@@ -21,16 +21,15 @@
                 android:id="@+id/tv_indicaciones_reserva"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/indicaciones_reserva"
-                android:textSize="15dp"/>
+                android:textSize="18sp"/>
         </LinearLayout>
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="EQUIPO A RESERVAR:"
+            android:text="@string/equipo_a_reservar"
             android:layout_margin="15dp"
             android:textSize="18sp"
             android:textColor="@color/oscuro"/>
@@ -44,7 +43,7 @@
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="FECHA / HORA UTILIZACIÓN:"
+            android:text="@string/fechayhora_utilizacion"
             android:layout_margin="15dp"
             android:textSize="18sp"
             android:textColor="@color/oscuro"/>
@@ -56,18 +55,18 @@
                 android:id="@+id/tv_fechaUsoequipo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Seleccione una fecha "
+                android:text="@string/seleccione_una_fecha"
                 android:layout_margin="15dp"
-                android:drawableRight="@drawable/ic_cal_black"
-                android:background="@drawable/rounded_edittext"/>
+                android:background="@drawable/rounded_edittext"
+                app:drawableEndCompat="@drawable/ic_cal_black" />
             <TextView
                 android:id="@+id/tv_horaUsoequipo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Seleccione una hora "
+                android:text="@string/seleccione_una_hora"
                 android:layout_margin="15dp"
-                android:drawableRight="@drawable/ic_time_black"
-                android:background="@drawable/rounded_edittext"/>
+                android:background="@drawable/rounded_edittext"
+                app:drawableEndCompat="@drawable/ic_time_black" />
 
         </LinearLayout>
 
@@ -75,7 +74,7 @@
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="FECHA / HORA DEVOLUCIÓN:"
+            android:text="@string/fechayhora_devolucion"
             android:layout_margin="15dp"
             android:textSize="18sp"
             android:textColor="@color/oscuro"/>
@@ -87,18 +86,18 @@
             android:id="@+id/tv_fechaDevequipo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Seleccione una fecha "
+            android:text="@string/seleccione_una_fecha"
             android:layout_margin="15dp"
-            android:drawableRight="@drawable/ic_cal_black"
-            android:background="@drawable/rounded_edittext"/>
+            android:background="@drawable/rounded_edittext"
+            app:drawableEndCompat="@drawable/ic_cal_black" />
         <TextView
             android:id="@+id/tv_horaDevequipo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Seleccione una hora "
+            android:text="@string/seleccione_una_hora"
             android:layout_margin="15dp"
-            android:drawableRight="@drawable/ic_time_black"
-            android:background="@drawable/rounded_edittext"/>
+            android:background="@drawable/rounded_edittext"
+            app:drawableRightCompat="@drawable/ic_time_black" />
         </LinearLayout>
 
         <LinearLayout
@@ -114,26 +113,18 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_edittext_focused"
                 android:backgroundTint="@color/green"
-                android:text="Hacer reservación"
+                android:text="@string/hacer_reservacion"
                 android:padding="15dp"/>
 
             <Button
-                android:id="@+id/button5"
-                android:layout_width="47dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_edittext"
-                android:backgroundTint="#FFFFFF"
-                android:enabled="false"
-                android:text="" />
-
-            <Button
                 android:id="@+id/btn_cancelarReserva"
-                android:layout_width="141dp"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_edittext_focused"
                 android:backgroundTint="#E30D14"
                 android:padding="15dp"
-                android:text="Cancelar" />
+                android:text="@string/cancelar_reserva"
+                android:layout_marginStart="10dp"/>
         </LinearLayout>
 
     </LinearLayout>
