--- a/app/src/main/res/layout/activity_reservar_equipos_maestro.xml
+++ b/app/src/main/res/layout/activity_reservar_equipos_maestro.xml
@@ -22,12 +22,12 @@
 
             <TextView
                 android:id="@+id/tv_reservarequipos"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="RESERVAR EQUIPOS"
+                android:text="@string/reservar_equipos"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -41,14 +41,15 @@
 
         <Button
             android:id="@+id/btn_reservarEquipo"
-            android:layout_width="209dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:background="@color/atarraya"
-            android:drawableLeft="@drawable/ic_add"
-            android:text="Hacer Nueva Reserva"
-            android:textColor="@color/blanco" />
+            android:drawableStart="@drawable/ic_add"
+            android:text="@string/hacer_nueva_reserva"
+            android:textColor="@color/blanco"
+            android:padding="15dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,12 +59,12 @@
             <TextView
                 android:id="@+id/tv_historialreservas"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_gravity="end"
                 android:layout_marginTop="50dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="HISTORIAL RESERVACIONES"
+                android:text="@string/historial_reservaciones"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
